k8s/digitalbank/dp-digibank-atm-search-node.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: digital-bank-backends-atm-node
    tier: backend
    tier-name: backend-atm    
  name: digital-bank-backends-atm-node-deployment
  namespace: digibank
spec:
  replicas: 1
  selector:
    matchLabels:
      app: digital-bank-backends-atm-node
  strategy: {}
  template:
    metadata:
      labels:
        app: digital-bank-backends-atm-node
        tier: backend
        tier-name: backend-atm              
    spec:
      containers:
      - image: leandrovo/digitalbank-backend-node:1.0
        name: digital-bank-backends-atm-node
        ports:
          - name: atm-port
            containerPort: 3000        
        resources: {}
status: {}
