k8s/digitalbank/dp-digibank-visa-java.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: digital-bank-backends-visa-java-deployment
  namespace: digibank
  labels:
    app: digital-bank-backends-visa-java
    tier: backend
    tier-name: backend-visa    
spec:
  replicas: 1
  selector:
    matchLabels:
      app: digital-bank-backends-visa-java
  template:
    metadata:
      labels:
        app: digital-bank-backends-visa-java
        tier: backend
        tier-name: backend-visa           
    spec:
      containers:
      - name: digital-bank-backends-visa-java
        image: leandrovo/digitalbank-backend-java:1.0
        resources:
          requests:
            memory: "512M"
            cpu: "500m"
          limits:
            memory: "2048M"
            cpu: "700m"
        ports:
          - name: visa-port
            containerPort: 8081
