k8s/digitalbank/mysql.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: "2022-02-07T19:19:47Z"
  labels:
    run: mysql
  name: mysql
  namespace: digibank
spec:
  containers:
  - image: mysql
    imagePullPolicy: Always
    name: mysql
    resources: {}
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    ports:
  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  nodeName: docker-desktop
  preemptionPolicy: PreemptLowerPriority
  priority: 0
  restartPolicy: Always
  schedulerName: default-scheduler
  securityContext: {}
  serviceAccount: default
  serviceAccountName: default
  terminationGracePeriodSeconds: 30
