k8s/digitalbank/deployment-backends.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: digital-bank-backends-deployment
  namespace: digibank
  labels:
    app: digital-bank-backends
spec:
  replicas: 1
  selector:
    matchLabels:
      app: digital-bank-backends
  template:
    metadata:
      labels:
        app: digital-bank-backends
    spec:
      containers:
      - name: digital-bank-backends
        image: leandrovo/digitalbank-backend-java:1.0
        resources:
          requests:
            memory: "1024M"
            cpu: "500m"
          limits:
            memory: "2048M"
            cpu: "700m"
        ports:
          - name: db-bkends-port
            containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: digital-bank-backends-svc
  namespace: digibank
spec:
  selector:
    app: digital-bank-backends
  ports:
    - name: http-credit
      port: 8081  
      targetPort: db-bkends-port
