k8s/digitalbank/deployment-bank.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: digital-bank-deployment
  namespace: digibank
  labels:
    app: digital-bank
spec:
  replicas: 1
  selector:
    matchLabels:
      app: digital-bank
  template:
    metadata:
      labels:
        app: digital-bank
    spec:
      containers:
      - name: digital-bank
        image: leandrovo/digitalbank-new:1.0
        resources:
          requests:
            memory: "1024M"
            cpu: "500m"
          limits:
            memory: "2048M"
            cpu: "750m"
        ports:
          - name: db-bank-port
            containerPort: 8080  
---

apiVersion: v1
kind: Service
metadata:
  name: digital-bank-svc
  namespace: digibank
spec:
  selector:
    app: digital-bank
  ports:
    - name: http
      port: 8080  
      targetPort:  db-bank-port
#use a nodeport for testing in local envs - like k8s in mac or minikube
#  type: NodePort
#user this in prod
  type: LoadBalancer
