k8s/digitalbank/deployment-broker.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: digital-bank-broker-deployment
  namespace: digibank
  labels:
    app: digital-bank-broker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: digital-bank-broker
  template:
    metadata:
      labels:
        app: digital-bank-broker
    spec:
      containers:
      - name: digital-bank-broker
        image: leandrovo/digitalbroker-new:1.0
        resources:
          requests:
            memory: "512M"
            cpu: "250m"
          limits:
            memory: "1024M"
            cpu: "500m"          
        ports:
          - name: broker-port-1
            containerPort: 8161
          - name: broker-port-2
            containerPort: 8161

---

apiVersion: v1
kind: Service
metadata:
  name: digital-bank-broker-svc
  namespace: digibank
spec:
  selector:
    app: digital-bank-broker
  ports:
    - name: http1
      port: 8161
      targetPort: broker-port-1  
    - name: http2
      port: 61616
      targetPort: broker-port-2
