k8s/digitalbank/mysql-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2022-02-07T20:09:21Z"
  labels:
    run: mysql
  name: mysql
  namespace: digibank
spec:
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    run: mysql
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
