k8s/digitalbank/svc-digibank-atm-search.yaml
apiVersion: v1
kind: Service
metadata:
  name: digital-bank-backends-atm-svc
  namespace: digibank
spec:
  selector:
    tier-name: backend-atm
  ports:
    - name: http-credit
      port: 8081  
      targetPort: atm-port
