k8s/digitalbank/dp-digibank-route.yaml
# IngresRoute
---
kind: IngressRoute
apiVersion: traefik.containo.us/v1alpha1
metadata:
  name: digital-bank-route
  namespace: digibank
spec:
  entryPoints: 
    - web
  routes:
  - match: Host(`node1`)
    kind: Rule
    services:
    - name: digital-bank-svc
      port: 8080
